<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.Login">

    <TextView
        android:id="@+id/title_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="16sp"
        android:textAppearance="@style/selamat_dat"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="10dp"
        android:alpha="0"
        />

    <TextView
        android:id="@+id/subTitle"
        style="@style/sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub_welcome"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/title_welcome"
        tools:layout_editor_absoluteX="20dp"
        android:alpha="0"
        />

    <ImageView
        android:id="@+id/loginAnim"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/login"
        android:paddingTop="20dp"
        android:contentDescription="@string/image_login"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:alpha="0"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal2" />



    <TextView
        android:id="@+id/text_title_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:alpha="0"
        android:paddingVertical="10dp"
        android:text="@string/title_email"
        style="@style/sub_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginAnim" />

    <com.example.buangin_v1.custom_view.EmailValidation
        android:id="@+id/ed_login_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:alpha="0"
        android:background="@drawable/edit_text"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_email" />

    <TextView
        android:id="@+id/text_title_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:paddingVertical="10dp"
        android:text="@string/title_password"
        style="@style/sub_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_email" />

    <com.example.buangin_v1.custom_view.PasswordValidation
        android:id="@+id/ed_login_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:alpha="0"
        android:background="@drawable/edit_text"
        android:drawableEnd="@drawable/remove_eye"
        android:inputType="textPassword"
        android:padding="10dp"
        style="@style/low"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_password" />

    <TextView
        android:id="@+id/btn_lupa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:alpha="0"
        android:paddingVertical="10dp"
        android:text="@string/forgot_pass"
        android:textAlignment="textEnd"
        style="@style/low"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_password" />

    <com.example.buangin_v1.custom_view.BtnLoginValid
        android:id="@+id/btn_masuk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/btn_title_masuk"
        style="@style/sub_title"
        android:layout_marginVertical="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_lupa" />

    <RelativeLayout
        android:id="@+id/view_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="450dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_buat_akun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:alpha="0"
        android:text="@string/belum_punya_akun"
        android:textAlignment="center"
        style="@style/low"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_masuk" />


</androidx.constraintlayout.widget.ConstraintLayout>