<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="20dp"
    tools:context=".ui.fragment.Home">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_banner"
        android:src="@drawable/banner" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_scan"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:text="@string/text_btn_scan"
                android:textAllCaps="false"
                app:backgroundTint="@color/green2"
                app:cornerRadius="8dp"
                app:icon="@drawable/scan"
                app:iconGravity="textStart"
                app:iconTint="@color/greenIcon" />


            <LinearLayout
                android:id="@+id/rectangle_2"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/card"
                android:elevation="3dp"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp">

                <TextView
                    style="@style/card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sub_poin" />

                <TextView
                    android:id="@+id/jml_poin"
                    style="@style/poin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:gravity="center"
                    android:text="@string/jml_poin" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@drawable/card_white"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/jml_transaksi"
                            style="@style/riwayat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/jml_transaksi" />

                        <TextView
                            android:id="@+id/ket_transaksi"
                            style="@style/riwayat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Transaksi" />

                    </LinearLayout>


                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="40dp"
                        android:background="@color/dark_grey" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/jml_tukar"
                            style="@style/riwayat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/jml_tukar" />

                        <TextView
                            android:id="@+id/ket_tukar"
                            style="@style/riwayat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Tukar" />

                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/card_penggunaan"
                android:elevation="2dp"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_penggunaan" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_card"
                        style="@style/cara_penggunaan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/content_edit" />

                    <TextView
                        android:id="@+id/sub_title_card"
                        style="@style/medium_gray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Aplikasi Buwang.In" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>