<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_rv"
    android:layout_margin="10dp"
    android:padding="15dp">

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/descImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/botol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/check_box"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingHorizontal="10dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/card_jenis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jenis_sampah"
            style="@style/semibold"
            />

        <TextView
            android:id="@+id/card_harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/harga_sampah"
            android:textColor="@color/grey"
            style="@style/low"
            />

    </LinearLayout>

    <CheckBox
        android:id="@+id/check_box"
        android:layout_width="30dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_delete"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        android:buttonTint="@color/green1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_delete"
        android:layout_width="28dp"
        android:layout_height="28dp"
        app:layout_constraintTop_toBottomOf="@+id/check_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/delete"
        />


<!--    <TextView-->
<!--        android:id="@+id/card_jml"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Stok: 12"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/check_box"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>